Align with latest Spring Boot 1.5.17 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -37,7 +37,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.7.10.RELEASE
+      version: 1.7.11.RELEASE
       modules:
         - spring-amqp
         - spring-rabbit
@@ -141,53 +141,53 @@ platform_definition:
         checkout: v1.2.6.BUILD
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.16.BUILD-SNAPSHOT
+      version: 1.5.16.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.16.BUILD-SNAPSHOT
+      version: 1.13.16.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.16.BUILD-SNAPSHOT
+      version: 2.2.16.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.16.BUILD-SNAPSHOT
+      version: 2.1.16.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.16.BUILD-SNAPSHOT
+      version: 1.1.16.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.16.BUILD-SNAPSHOT
+      version: 1.9.16.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.16.BUILD-SNAPSHOT
+      version: 1.11.16.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.16.BUILD-SNAPSHOT
+      version: 1.2.16.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.16.BUILD-SNAPSHOT
+      version: 1.0.16.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.16.BUILD-SNAPSHOT
+      version: 1.10.16.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -195,29 +195,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.16.BUILD-SNAPSHOT
+      version: 4.2.16.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.16.BUILD-SNAPSHOT
+      version: 1.8.16.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.16.BUILD-SNAPSHOT
+      version: 2.6.16.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.16.BUILD-SNAPSHOT
+      version: 2.1.16.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.20.BUILD-SNAPSHOT
+      version: 4.3.20.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -372,7 +372,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.2.8.RELEASE
+      version: 4.2.9.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -400,7 +400,7 @@ platform_definition:
        - spring-security-jwt
     - name: Spring Security OAuth
       groupId: org.springframework.security.oauth
-      version: 2.0.15.RELEASE
+      version: 2.0.16.RELEASE
       modules:
         - spring-security-oauth
         - spring-security-oauth2
@@ -812,6 +812,7 @@ platform_definition:
     'com.jayway.jsonpath:json-path': '2.3.0'
     'com.rometools:rome': '1.7.4'
     'com.squareup.okhttp3:okhttp': '3.8.1'
+    'com.unboundid:unboundid-ldapsdk': '4.0.8'
     'io.netty:netty-all': '4.1.29.Final'
     'javax.jdo:jdo-api': '3.1'
     'net.sourceforge.htmlunit:htmlunit': '2.23'
