--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -64,7 +64,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.5.20.BUILD-SNAPSHOT
+      version: 1.5.20.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
