--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,12 +9,13 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.1.11.RELEASE
+      version: 3.1.12.RELEASE
       modules:
         - reactor-core
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 2.0.8.RELEASE
+      version: 2.0.10.BUILD-SNAPSHOT
+      checkout: 2.0.x
       modules:
         - spring-amqp
         - spring-rabbit
@@ -108,7 +109,7 @@ platform_definition:
         - spring-boot-starter-web-services
     - name: Spring Cloud Connectors
       groupId: org.springframework.cloud
-      version: 2.0.3.RELEASE
+      version: 2.0.4.RELEASE
       modules:
         - spring-cloud-connectors-core
         - spring-cloud-cloudfoundry-connector
@@ -198,7 +199,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.10.RELEASE
+      version: 5.0.11.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
@@ -228,7 +229,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 5.0.9.RELEASE
+      version: 5.0.10.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         runTestsWith:
@@ -368,12 +369,12 @@ platform_definition:
         tagPrefix:
     - name: Spring Session Data GemFire
       groupId: org.springframework.session
-      version: 2.0.5.RELEASE
+      version: 2.0.6.RELEASE
       modules:
         - spring-session-data-gemfire
     - name: Spring Session Data Geode
       groupId: org.springframework.session
-      version: 2.0.5.RELEASE
+      version: 2.0.6.RELEASE
       modules:
         - spring-session-data-gemfire
     - name: Spring Session Data MongoDB
@@ -853,7 +854,6 @@ platform_definition:
       - 'org.mockito:mockito-inline'
       - 'org.mongodb:bson'
       - 'org.mongodb:mongodb-driver-core'
-      - 'org.neo4j:neo4j-ogm-api'
       - 'org.neo4j:neo4j-ogm-compiler'
       - 'org.neo4j:neo4j-ogm-embedded-driver'
       - 'org.neo4j:neo4j-ogm-http-driver'
@@ -886,6 +886,8 @@ platform_definition:
       - 'xml-apis:xml-apis'
   downgraded_dependencies:
     'com.nimbusds:oauth2-oidc-sdk': '5.64.4'
+    'io.netty:netty-all': '4.1.31.Final'
+    'io.netty:netty-buffer': '4.1.31.Final'
     'io.reactivex.rxjava2:rxjava': '2.1.17'
     'javax.servlet:javax.servlet-api': '4.0.1'
     'net.sourceforge.htmlunit:htmlunit': '2.31'
@@ -895,6 +897,12 @@ platform_definition:
     'org.aspectj:aspectjrt': '1.9.1'
     'org.aspectj:aspectjweaver': '1.9.1'
     'org.bouncycastle:bcpkix-jdk15on': '1.60'
+    'org.eclipse.jetty:jetty-client': '9.4.14.v20181114'
+    'org.eclipse.jetty:jetty-server': '9.4.14.v20181114'
+    'org.eclipse.jetty:jetty-servlet': '9.4.14.v20181114'
+    'org.eclipse.jetty:jetty-webapp': '9.4.14.v20181114'
+    'org.eclipse.jetty.websocket:websocket-client': '9.4.14.v20181114'
+    'org.eclipse.jetty.websocket:websocket-server': '9.4.14.v20181114'
     'org.projectlombok:lombok': '1.18.4'
     'org.seleniumhq.selenium:htmlunit-driver': '3.11.0'
     'org.seleniumhq.selenium:selenium-java': '3.13.0'
