--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -141,53 +141,53 @@ platform_definition:
         checkout: v1.2.6.BUILD
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.18.BUILD-SNAPSHOT
+      version: 1.5.18.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.18.BUILD-SNAPSHOT
+      version: 1.13.18.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.18.BUILD-SNAPSHOT
+      version: 2.2.18.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.18.BUILD-SNAPSHOT
+      version: 2.1.18.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.18.BUILD-SNAPSHOT
+      version: 1.1.18.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.18.BUILD-SNAPSHOT
+      version: 1.9.18.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.18.BUILD-SNAPSHOT
+      version: 1.11.18.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.18.BUILD-SNAPSHOT
+      version: 1.2.18.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.18.BUILD-SNAPSHOT
+      version: 1.0.18.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.18.BUILD-SNAPSHOT
+      version: 1.10.18.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -195,29 +195,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.18.BUILD-SNAPSHOT
+      version: 4.2.18.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.18.BUILD-SNAPSHOT
+      version: 1.8.18.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.18.BUILD-SNAPSHOT
+      version: 2.6.18.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.18.BUILD-SNAPSHOT
+      version: 2.1.18.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.21.RELEASE
+      version: 4.3.22.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -458,7 +458,7 @@ platform_definition:
         - spring-webflow
     - name: Spring Web Services
       groupId: org.springframework.ws
-      version: 2.4.3.RELEASE
+      version: 2.4.4.RELEASE
       modules:
         - spring-ws-core
         - spring-ws-security
@@ -810,9 +810,11 @@ platform_definition:
     'com.rometools:rome': '1.7.4'
     'com.squareup.okhttp3:okhttp': '3.8.1'
     'com.unboundid:unboundid-ldapsdk': '4.0.8'
-    'io.netty:netty-all': '4.1.31.Final'
+    'io.netty:netty-all': '4.1.32.Final'
     'javax.jdo:jdo-api': '3.1'
     'net.sourceforge.htmlunit:htmlunit': '2.23'
+    'org.apache.poi:poi': '3.17'
+    'org.apache.poi:poi-ooxml': '3.17'
     'org.apache.wss4j:wss4j-ws-security-dom': '2.2'
     'org.bouncycastle:bcpkix-jdk15on': '1.60'
     'org.beanshell:bsh': '2.0b5'
