--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,12 +9,12 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.1.12.RELEASE
+      version: 3.1.14.RELEASE
       modules:
         - reactor-core
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 2.0.11.BUILD-SNAPSHOT
+      version: 2.0.11.RELEASE
       modules:
         - spring-amqp
         - spring-rabbit
@@ -28,7 +28,7 @@ platform_definition:
           - jdk8
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 4.0.1.RELEASE
+      version: 4.0.2.RELEASE
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -120,86 +120,86 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.13.BUILD-SNAPSHOT
+      version: 3.0.13.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.13.BUILD-SNAPSHOT
+      version: 3.0.13.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data GemFire
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data Geode
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-geode
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.13.BUILD-SNAPSHOT
+      version: 5.0.13.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.13.BUILD-SNAPSHOT
+      version: 2.0.13.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.13.BUILD-SNAPSHOT
+      version: 3.0.13.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.13.BUILD-SNAPSHOT
+      version: 3.0.13.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.11.RELEASE
+      version: 5.0.12.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -229,7 +229,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 5.0.11.BUILD-SNAPSHOT
+      version: 5.0.11.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
@@ -273,7 +273,7 @@ platform_definition:
         - spring-integration-zookeeper
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 2.1.11.RELEASE
+      version: 2.1.12.RELEASE
       modules:
         - spring-kafka
         - spring-kafka-test
@@ -321,7 +321,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.11.BUILD-SNAPSHOT
+      version: 5.0.11.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -357,7 +357,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 2.0.8.RELEASE
+      version: 2.0.9.RELEASE
       modules:
         - spring-session-core
         - spring-session-data-redis
@@ -411,7 +411,7 @@ platform_definition:
         - spring-webflow
     - name: Spring Web Services
       groupId: org.springframework.ws
-      version: 3.0.4.RELEASE
+      version: 3.0.6.RELEASE
       modules:
         - spring-ws-core
         - spring-ws-security
@@ -462,6 +462,7 @@ platform_definition:
       # that both it and the rest of the Platform do not depend upon directly
       - 'ch.qos.logback:logback-access'
       - 'ch.qos.logback:logback-core'
+      - 'commons-collections:commons-collections'
       - 'com.datastax.cassandra:cassandra-driver-mapping'
       - 'com.fasterxml:classmate'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-avro'
@@ -887,9 +888,10 @@ platform_definition:
       - 'xml-apis:xml-apis'
   downgraded_dependencies:
     'com.nimbusds:oauth2-oidc-sdk': '5.64.4'
-    'com.squareup.okhttp3:okhttp': '3.12.0'
-    'io.netty:netty-all': '4.1.31.Final'
-    'io.netty:netty-buffer': '4.1.31.Final'
+    'com.rometools:rome': '1.12.0'
+    'com.squareup.okhttp3:okhttp': '3.12.1'
+    'io.netty:netty-all': '4.1.32.Final'
+    'io.netty:netty-buffer': '4.1.32.Final'
     'io.reactivex.rxjava2:rxjava': '2.1.17'
     'javax.servlet:javax.servlet-api': '4.0.1'
     'net.sourceforge.htmlunit:htmlunit': '2.31'
@@ -908,6 +910,7 @@ platform_definition:
     'org.projectlombok:lombok': '1.18.4'
     'org.seleniumhq.selenium:htmlunit-driver': '3.11.0'
     'org.seleniumhq.selenium:selenium-java': '3.13.0'
+    'org.webjars:webjars-locator-core': '0.36'
     'org.yaml:snakeyaml': '1.20'
   repositories:
       - id: central
