Tolerate missing v at start of Spring Integration 4.3.19's tag

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -252,6 +252,7 @@ platform_definition:
         runTestsWith:
           - jdk8
         repository: https://github.com/spring-projects/spring-integration
+        tagPrefix:
       modules:
         - spring-integration-amqp
         - spring-integration-core
