Update build configuration to prefer HTTPS
See gh-817

--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -1105,7 +1105,7 @@
 				<repository>
 					<id>spring-snapshots</id>
 					<name>Spring Snapshots</name>
-					<url>http://repo.spring.io/libs-snapshot</url>
+					<url>https://repo.spring.io/libs-snapshot</url>
 					<snapshots>
 						<enabled>true</enabled>
 					</snapshots>
