--- a/platform-tests/src/test/resources/pom-footer.template
+++ b/platform-tests/src/test/resources/pom-footer.template
@@ -4,7 +4,7 @@
 		<repository>
 			<id>spring-snapshots</id>
 			<name>Spring Snapshots repository</name>
-			<url>http://repo.spring.io/libs-snapshot</url>
+			<url>https://repo.spring.io/libs-snapshot</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -13,13 +13,18 @@
 		<repository>
 			<id>osgeo</id>
 			<name>OSGeo downloads</name>
-			<url>http://download.osgeo.org/webdav/geotools</url>
+			<url>https://download.osgeo.org/webdav/geotools</url>
+		</repository>
+		<repository>
+			<id>neo4j</id>
+			<name>Neo4j releases</name>
+			<url>https://m2.neo4j.org/content/repositories/releases/</url>
 		</repository>
 		<!-- Required for various JasperReports-related dependencies -->
 		<repository>
 			<id>jasper-reports</id>
 			<name>Jasper Reports</name>
-			<url>http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts</url>
+			<url>https://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts</url>
 		</repository>
 	</repositories>
 
