--- a/platform-tests/src/test/resources/pom-footer.template
+++ b/platform-tests/src/test/resources/pom-footer.template
@@ -15,7 +15,7 @@
 		</repository>
 		<repository>
 			<id>neo4j-snapshots</id>
-			<url>http://m2.neo4j.org/content/repositories/snapshots</url>
+			<url>https://m2.neo4j.org/content/repositories/snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
