--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -37,7 +37,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.7.13.BUILD-SNAPSHOT
+      version: 1.7.13.RELEASE
       modules:
         - spring-amqp
         - spring-rabbit
@@ -141,53 +141,53 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.19.BUILD-SNAPSHOT
+      version: 1.5.20.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.19.BUILD-SNAPSHOT
+      version: 1.13.20.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.19.BUILD-SNAPSHOT
+      version: 2.2.20.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.19.BUILD-SNAPSHOT
+      version: 2.1.20.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.19.BUILD-SNAPSHOT
+      version: 1.1.20.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.19.BUILD-SNAPSHOT
+      version: 1.9.20.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.19.BUILD-SNAPSHOT
+      version: 1.11.20.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.19.BUILD-SNAPSHOT
+      version: 1.2.20.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.19.BUILD-SNAPSHOT
+      version: 1.0.20.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.19.BUILD-SNAPSHOT
+      version: 1.10.20.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -195,24 +195,24 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.19.BUILD-SNAPSHOT
+      version: 4.2.20.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.19.BUILD-SNAPSHOT
+      version: 1.8.20.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.19.BUILD-SNAPSHOT
+      version: 2.6.20.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.19.BUILD-SNAPSHOT
+      version: 2.1.20.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
@@ -246,7 +246,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.20.BUILD-SNAPSHOT
+      version: 4.3.20.RELEASE
       build:
         checkout: 4.3.x
         compileWith: jdk8
@@ -372,7 +372,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.2.12.BUILD-SNAPSHOT
+      version: 4.2.12.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
